<resources>
    <string name="app_name">Nutri Finder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_item_desc_placholder">In this chapter, you’re going to learn about the different types of subjects in RxJava, see how to work with each one and why you might choose one over another based on some common use cases.</string>
    <string name="note_detail_desc_placeholder">You’ve gotten a handle on what an Observable is, how to create one, how to subscribe to it, and how to dispose of things when you’re done. Observables are a fundamental part of RxJava, but a common need when developing apps is to manually add new values onto an Observable at runtime that will then be emitted to subscribers. What you want is something that can act as both an Observable and as an observer. And that something is called a subject.</string>
    <string name="error_description">Description missing</string>
    <string name="error_title">Title missing</string>
    <string name="error_tag_text">Enter text</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_job_title">Enter job title</string>
    <string name="enter_email">Enter email address</string>
    <string name="invalid_email">Invalid email entered</string>
    <string name="enter_password">Enter password</string>
    <string name="invalid_password">Your password must be at least 8 characters</string>
    <string name="logout">Logout</string>
    <string name="noteListingFragment">Notes</string>
    <string name="taskListingFragment">Tasks</string>
    <string name="notes">Notes</string>
    <string name="tasks">Tasks</string>
    <string name="home_fragment">Home</string>
    <string name="create_task">Create Task</string>
    <string name="create">Create</string>
    <string name="done">Done</string>
    <string name="error_task_detail">Task detail is missing</string>
    <string name="passwords_do_not_match">passwords_do_not_match</string>
    <string name="select_goal">Select Goal</string>
    <string name="lose_weight">lose weight</string>
    <string name="maintain_weight">Maintain weight</string>
    <string name="gain_weight">Gain weight</string>
    <string name="not_very_active">Not Very Active</string>
    <string name="lightly_active">Lightly Active</string>
    <string name="active">Active</string>
    <string name="very_active">Very Active</string>
    <string name="select_gander">Select Gander</string>
    <string name="male">Male</string>
    <string name="enter_information">Enter information</string>
    <string name="weakly_goal">Weakly goal?</string>
    <string name="goal_weight">Goal weight?</string>
    <string name="sign_up">Sign Up</string>
    <string name="activity_level">Activity Level</string>
    <string name="back_button">back button</string>
    <string name="female">Female</string>
    <string name="add_meals">+ Add meals</string>
    <string name="meals">meals</string>
    <string name="previous_day">previous_day</string>
    <string name="next_day">next_day</string>
    <string name="breakfast">breakfast</string>
    <string name="launch">launch</string>
    <string name="personal_information">Personal Information</string>
    <string name="dinner">dinner</string>
    <string name="snack">snack</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="result">Result</string>
    <string name="track_your_daily"><![CDATA[Track your daily activity & stay healthy]]></string>
    <string name="good_day">Good Day,</string>
    <string name="my_name">Ahmed</string>
    <string name="calculate_kcal">calculate Kcal</string>
    <string name="calculate_note">Calculate the number of calories needed for daily consumption</string>
    <string name="calculate">calculate</string>
    <string name="lose_0_25_kg_per_week">Lose 0.25 kg per week</string>
    <string name="lose_0_5_kg_per_week">Lose 0.5 kg per week</string>
    <string name="lose_0_57_kg_per_week">Lose 0.57 kg per week</string>
    <string name="lose_1_kg_per_week">Lose 1 kg per week</string>
    <string name="maintain_current_weight">Maintain current weight</string>
    <string name="gain_0_25_kg_per_week">Gain 0.25 kg per week</string>
    <string name="gain_0_5_kg_per_week">Gain 0.5 kg per week</string>
    <string name="gain_0_57_kg_per_week">Gain 0.57 kg per week</string>
    <string name="gain_1_kg_per_week">Gain 1 kg per week</string>
    <string name="create_account">Create Account</string>
    <string name="grams_format">%1$.1f g</string>
    <string name="calories_format">%1$.1f cal</string>
    <string name="calories">Calories</string>
    <string name="cal">cal</string>

    <string-array name="units_array">
        <item>g</item>
        <item>kg</item>
        <item>ml</item>
        <item>L</item>
    </string-array>


</resources>